OSSINDEX fix